--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": "https://github.com/CoderCoco/twitch-coding-challenge-Sept2021",
+  "author": "CoderCoco",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.7.10",
     "@types/tmi.js": "^1.7.2",
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "tmi.js": "^1.8.5"
+    "chalk": "^4.1.2",
+    "reflect-metadata": "^0.1.13",
+    "tmi.js": "^1.8.5",
+    "tsyringe": "^4.6.0",
+    "winston": "^3.3.3"
   }
 }
